--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
 
 :root {
-  --background: #ffffff;
+  --background: hsl(172, 67%, 45%);
   --foreground: #171717;
   --primary-cyan: hsl(172, 67%, 45%);
   --dark-cyan: hsl(183, 100%, 15%);
@@ -10,7 +10,7 @@
   --grey-400: hsl(184, 14%, 56%);
   --grey-200: hsl(185, 41%, 84%);
   --grey-50: hsl(189, 47%, 97%);
-  --white: hsl(0, 100%, 100%);
+  --white: hsl(172, 67%, 45%);
   --bg-cyan: hsl(185, 41%, 97%);
 }
 
